--- a/lib/sample_phx_web/templates/user/show.html.eex
+++ b/lib/sample_phx_web/templates/user/show.html.eex
@@ -1,8 +1,5 @@
 <h1>Showing User</h1>
-
-<b><%= first_name(@user) %></b>
-(<%= @user.id %>)
-
+<%= render "user.html", user: @user %>
 <div>
   <%= link "All Users", to: Routes.user_path(@conn, :index) %>
 </div>
