--- a/lib/sample_phx_web/templates/page/index.html.eex
+++ b/lib/sample_phx_web/templates/page/index.html.eex
@@ -1,6 +1,9 @@
 <section class="phx-hero">
   <h1><%= gettext "Welcome to %{name}!", name: "Sample Phx" %></h1>
   <p>Peace-of-mind from prototype to production</p>
+  <div>
+    <%= link "Sign up", to: Routes.user_path(@conn, :new) %>
+  </div>
 </section>
 
 <section class="row">
