--- a/lib/sample_phx_web/templates/page/index.html.eex
+++ b/lib/sample_phx_web/templates/page/index.html.eex
@@ -1,11 +1,9 @@
-<section class="phx-hero">
-  <h1><%= gettext "Welcome to %{name}!", name: "Sample Phx" %></h1>
-  <p>Peace-of-mind from prototype to production</p>
-  <div>
-    <%= link "Sign up", to: Routes.user_path(@conn, :new) %>
-  </div>
+<section class="jumbotron">
+  <h1 class="display-4"><%= gettext "Welcome to %{name}!", name: "Sample Phx" %></h1>
+  <p class="lead">Peace-of-mind from prototype to production</p>
+  <hr class="my-4">
+  <%= link "Sign up", to: Routes.user_path(@conn, :new), class: "btn btn-primary" %>
 </section>
-
 <section class="row">
   <article class="column">
     <h2>Resources</h2>
