--- a/lib/sample_phx_web/templates/user/new.html.eex
+++ b/lib/sample_phx_web/templates/user/new.html.eex
@@ -1,30 +1,15 @@
 <h1>New User</h1>
 
-<%= form_for @changeset, Routes.user_path(@conn, :create), fn f -> %>
+<%= form_for @changeset, Routes.user_path(@conn, :create), [], fn f -> %>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
+      Oops, something went wrong! Please check the errors below.
     </div>
   <% end %>
 
-  <div class="form-group">
-    <%= text_input f, :name, placeholder: "Name" %>
-    <%= error_tag f, :name %>
-  </div>
+  <%= input_tag f, :name, placeholder: "Name" %>
+  <%= input_tag f, :username, placeholder: "Username" %>
+  <%= input_tag f, :password, placeholder: "Password" %>
 
-  <div class="form-group">
-    <%= text_input f, :username, placeholder: "Username" %>
-    <%= error_tag f, :username %>
-  </div>
-
-  <div class="form-group">
-    <%= password_input f, :password, placeholder: "Password" %>
-    <%= error_tag f, :password %>
-  </div>
-
-  <%= submit "Create User" %>
+  <%= submit "Create User", class: "btn btn-primary" %>
 <% end %>
-
-<div>
-  <%= link "All Users", to: Routes.user_path(@conn, :index) %>
-</div>
