--- a/lib/sample_phx_web/templates/layout/app.html.eex
+++ b/lib/sample_phx_web/templates/layout/app.html.eex
@@ -13,10 +13,17 @@
     <header>
       <section class="container">
         <nav role="navigation">
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
+          <ul class="breadcrumb float-right bg-transparent">
+            <li class="breadcrumb-item"><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
             <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
-              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
+              <li class="breadcrumb-item"><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
+            <% end %>
+            <%= if @current_user do %>
+              <li class="breadcrumb-item"><%= @current_user.username %></li>
+              <li class="breadcrumb-item"><%= link "Log out", to: Routes.session_path(@conn, :delete, @current_user), method: "delete" %></li>
+            <% else %>
+              <li class="breadcrumb-item"><%= link "Register", to: Routes.user_path(@conn, :new) %></li>
+              <li class="breadcrumb-item"><%= link "Log in", to: Routes.session_path(@conn, :new) %></li>
             <% end %>
           </ul>
         </nav>
@@ -24,6 +31,7 @@
           <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
         </a>
       </section>
+
     </header>
     <main role="main" class="container">
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
