--- a/lib/sample_phx_web/templates/video/form.html.eex
+++ b/lib/sample_phx_web/templates/video/form.html.eex
@@ -1,13 +1,14 @@
 <%= form_for @changeset, @action, fn f -> %>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
+      Oops, something went wrong! Please check the errors below.
     </div>
   <% end %>
 
   <%= input_tag f, :url %>
   <%= input_tag f, :title %>
   <%= input_tag f, :description, using: :textarea %>
+  <%= select_tag f, :category_id, category_select_options(@categories), prompt: "Choose a category" %>
 
   <%= submit "Save", class: "btn btn-primary" %>
 <% end %>
