--- a/lib/sample_phx_web/templates/layout/app.html.eex
+++ b/lib/sample_phx_web/templates/layout/app.html.eex
@@ -19,6 +19,8 @@
               <li class="breadcrumb-item"><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
             <% end %>
             <%= if @current_user do %>
+              <li class="breadcrumb-item"><%= link "Users", to: Routes.user_path(@conn, :index) %></li>
+              <li class="breadcrumb-item"><%= link "Videos", to: Routes.video_path(@conn, :index) %></li>
               <li class="breadcrumb-item"><%= @current_user.username %></li>
               <li class="breadcrumb-item"><%= link "Log out", to: Routes.session_path(@conn, :delete, @current_user), method: "delete" %></li>
             <% else %>
@@ -27,11 +29,10 @@
             <% end %>
           </ul>
         </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
+        <%= link to: Routes.page_path(@conn, :index) do %>
           <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
-        </a>
+        <% end  %>
       </section>
-
     </header>
     <main role="main" class="container">
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
