--- a/lib/sample_phx_web/templates/watch/show.html.eex
+++ b/lib/sample_phx_web/templates/watch/show.html.eex
@@ -13,3 +13,14 @@
     </div>
   </div>
 </div>
+
+<hr>
+
+<div class="row">
+  <div class="col-md col-lg-8">
+    <h3>Users</h3>
+    <ul id="user-list">
+      <%# Populated by JS %>
+    </ul>
+  </div>
+</div>
